# Durian

./: .gitignore  CLAUDE.md  MiracleAi.xlsx  README.md  deep-research-report.md  implementation_plan.md
backend/: .env.example  claude_generator.py  database.py  feedback_store.py  generator.py  ingestion.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
backend/data/: gold_examples.json  jobs.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ContentPanel.jsx  Layout.jsx  SKUList.jsx  VersionPicker.jsx
frontend/src/pages/: ExportPage.jsx  GeneratingPage.jsx  ReviewPage.jsx  UploadPage.jsx
frontend/src/store/: index.js
