[project]
name = "auto-caption-backend"
version = "0.1.0"
description = "Auto caption backend"
authors = [
    {name = "Vaibhav Holani",email = "vaibhavholani@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic (>=2.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "google-genai (>=1.68.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "langfuse (>=4.0.0,<5.0.0)",
    "anthropic (>=0.86.0,<0.87.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
